testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToMergedClass.errors.txt
jsdocTypeReferenceToMergedClass.js(6,11): error TS2339: Property 'Project' does not exist on type '{}'.
jsdocTypeReferenceToMergedClass.js(7,11): error TS2339: Property 'Project' does not exist on type '{}'.


==== jsdocTypeReferenceToMergedClass.js (2 errors) ====
    var Workspace = {}
    /** @type {Workspace.Project} */
    var p;
    p.isServiceProject()
    
    Workspace.Project = function wp() { }
              ~~~~~~~
!!! error TS2339: Property 'Project' does not exist on type '{}'.
    Workspace.Project.prototype = {
              ~~~~~~~
!!! error TS2339: Property 'Project' does not exist on type '{}'.
      isServiceProject() {}
    }
    